[package]
name = "rust-ui-test-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7.0", features = ["image"] }
iced_native = "0.8.0"
# iced_aw = { version = "0.3.0", features = ["grid"] }
once_cell = "1.17.0"
